# skillstack

./: .gitignore  CHANGELOG.md  LICENSE  README.md  plugin.json
.claude-plugin/: marketplace.json  registry.json
.githooks/: pre-commit
.omc/: prd.json  progress.txt
agent-evaluation/: CHANGELOG.md  README.md
agent-project-development/: CHANGELOG.md  README.md
api-design/: CHANGELOG.md  README.md  SKILL.md  plugin.json
bdi-mental-states/: CHANGELOG.md  README.md
brainstorm-swarm/: CHANGELOG.md  README.md
cicd-pipelines/: CHANGELOG.md  README.md  SKILL.md
cloud-finops/: CHANGELOG.md  README.md
code-review/: CHANGELOG.md  README.md  SKILL.md  plugin.json
code-review/skills/code-review/scripts/: README.md  config.py  file_handler.py  performance_check.py  pr-comment-filter.py  pr-comment-grabber.py  pr_comment_filter.py  pyproject.toml  response_strategy.py  style_audit.py
communication/: CHANGELOG.md  README.md
consistency-standards/: CHANGELOG.md  README.md  SKILL.md
content-modelling/: CHANGELOG.md  README.md  SKILL.md  plugin.json
context-compression/: CHANGELOG.md  README.md
context-degradation/: CHANGELOG.md  README.md
context-fundamentals/: CHANGELOG.md  README.md
context-optimization/: CHANGELOG.md  README.md
creative-problem-solving/: CHANGELOG.md  README.md  SKILL.md
critical-intuition/: CHANGELOG.md  README.md  SKILL.md  plugin.json
debugging/: CHANGELOG.md  README.md  SKILL.md
docker-containerization/: CHANGELOG.md  README.md  SKILL.md  plugin.json
mcp-server/templates/mcp-server-python/: README.md  pyproject.toml
(+1926 files in other folders)
