[project]
name = "consultant-cli"
version = "1.0.0"
description = "LiteLLM-powered LLM consultation tool for code analysis"
requires-python = ">=3.10"
dependencies = [
    "litellm",
    "requests>=2.31.0",
    "tenacity",
    "markitdown>=0.1.0",
    "fastapi",
    "orjson",
]

[project.scripts]
consultant-cli = "consultant_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
